# satori-client-cpp

./: .gitattributes  .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  Rin  bot.cpp  bot.h  cmake_install.cmake  demo.cpp  demo_toolcall.cpp  main.cpp  satori_client.h
.cache/clangd/index/: CowData.cpp.1A2A54DA2A7D68FD.idx  LLMAgent.cpp.ABE9282095794738.idx  LLMAgent.h.F2A8E4A2B301790F.idx  LLMClient.cpp.AC563459F38DBAC1.idx  LLMClient.h.E0EB16541A17BB34.idx  MessageApi.cpp.79CEB432F5579680.idx  MessageApi.h.A7E2FA88275CA93C.idx  PipeVar.cpp.2009DCC2F9596CEB.idx  PipeVar.hpp.D966697A7B86199B.idx  ProcessBuilder.cpp.EA11AD8F6035714F.idx  ProcessBuilder.hpp.6BF696BA6D8571CE.idx  ProcessBuilder_posix.cpp.C1122916DAD55FF5.idx  ProcessBuilder_windows.cpp.366D383FFD723B36.idx  Satori.cpp.A40F7D977F77C27E.idx  Satori.h.B69A14E6A459CFEF.idx  basic_types.hpp.DB77A833479570ED.idx  bot.cpp.F310A34EE27B9FBC.idx  bot.h.5E99F394DCCC1361.idx  environ.cpp.EE83B1A0BE3E8793.idx  environ.hpp.972468E25A4832C6.idx  json.hpp.3F538338811B8245.idx  llmclient.h.B163D01EFE8EC161.idx  main.cpp.22D2034D6616C298.idx  pipe.cpp.16DE97A3C67C40C8.idx  pipe.hpp.274C4A435DEF56E0.idx  satori.cpp.A78850C48E38DC7A.idx  satori.h.218C3A31B6B4F491.idx  shell_utils.cpp.FA690CB7F8A82D60.idx  shell_utils.hpp.ACF6AF6FE8E14811.idx  subprocess.hpp.24BB40225846BDA5.idx  utf8_to_utf16.cpp.2EB5A2B2F2722A04.idx  utf8_to_utf16.hpp.6B7AC722298CB077.idx
LLMClient/: LLMAgent.cpp  LLMAgent.h  LLMClient.cpp  LLMClient.h  tool.hpp
Satori/: Satori.cpp  Satori.h
api/: ApiHelper.h  ChannelApi.cpp  ChannelApi.h  FriendApi.cpp  FriendApi.h  GuildApi.cpp  GuildApi.h  LoginApi.cpp  LoginApi.h  MessageApi.cpp  MessageApi.h  ReactionApi.cpp  ReactionApi.h  UserApi.cpp  UserApi.h
httpapi/: MessageApi.cpp  MessageApi.h
